MS Update #3 (Shop & Product Page)
Co-authored-by: Kevin Duncke <kevinduncke@gmail.com>
Co-authored-by: Roger Duncke <RogerDuncke@users.noreply.github.com>

--- a/products/carqueja.html
+++ b/products/carqueja.html
@@ -33,17 +33,64 @@
                 </div>
             </div>
             <div class="ms-product-dta">
-                <h1 class="ms-prd-h1">Carqueja</h1>
-                <p class="ms-prd-p">Our award-winning Brockley Breakfast loose leaf tea blend is a twist on the original English Breakfast tea, 
-                    named after our South London home. This whole leaf black tea brews a wonderfully balanced, 
-                    all round breakfast tea, served best with a dash of milk.
-                    Now available in 100% plastic-free packaging! Find out more about this change here.
-                </p>
+                <div class="ms-product-divcontent">
+                    <h1 class="ms-prd-h1">Carqueja</h1>
+                    <p class="ms-prd-price">$300 ARS</p>
+                    <h2 class="ms-prd-h2">Bacharis trimera</h2>
+                    <p class="ms-prd-p">Por su gusto amargo, la medicina
+                        popular la recomienda para combatir problemas digestivos 
+                        y hepáticos. Es una planta ampliamente distribuida en América del Sur,
+                        donde es utilizada tradicionalmente como planta medicinal.
+                    </p>
+                    <div>
+                        <a class="collapsible">
+                            <div class="ms-prd-drop-div">
+                                <div class="ms-prd-divtitle">
+                                    <i class="fa-solid fa-leaf"></i>
+                                    <h3 class="ms-prd-drop-title">Propiedades</h3>
+                                </div>
+                                <i class="fas fa-chevron-down"></i>
+                            </div>
+                        </a>
+                        <div class="ms-prd-drop-content"> 
+                            <p>Hello World</p>
+                        </div>
+                    </div>
+                    <div>
+                        <a class="collapsible">
+                            <div class="ms-prd-drop-div">
+                                <div class="ms-prd-divtitle">
+                                    <i class="fa-solid fa-heart"></i>
+                                    <h3 class="ms-prd-drop-title">Usos</h3>
+                                </div>
+                                <i class="fas fa-chevron-down"></i>
+                            </div>
+                        </a>
+                        <div class="ms-prd-drop-content"> 
+                            <p>Hello World</p>
+                        </div>
+                    </div>
+                    <div>
+                        <a class="collapsible">
+                            <div class="ms-prd-drop-div">
+                                <div class="ms-prd-divtitle">
+                                    <i class="fa-solid fa-mug-saucer"></i>
+                                    <h3 class="ms-prd-drop-title">Preparación</h3>
+                                </div>
+                                <i class="fas fa-chevron-down"></i>
+                            </div>
+                        </a>
+                        <div class="ms-prd-drop-content"> 
+                            <p>Hello World</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </main>
     <footer>
 
     </footer>
+    <script src="../scripts/collapsible.js"></script>
 </body>
 </html>
