--- a/policies/privacy-policy.html
+++ b/policies/privacy-policy.html
@@ -354,6 +354,6 @@
 
     </footer>
 
-    <script src="../scripts/policies.js"></script>
+    <script src="../scripts/collapsible.js"></script>
 </body>
 </html>
