--- a/policies/terms-of-service.html
+++ b/policies/terms-of-service.html
@@ -825,6 +825,6 @@
     </footer>
 
     
-  <script src="../scripts/policies.js"></script>
+    <script src="../scripts/collapsible.js"></script>
 </body>
 </html>
