--- a/main.html
+++ b/main.html
@@ -204,7 +204,7 @@
             </div>  
           </div>
           <div class="ms-main-prd-dvm">
-            <a class="ms-main-prd-avm" href="https://misionessabor.com/collections/all.html">Ver Más</a>
+            <a class="ms-main-prd-avm" href="https://misionessabor.com/pages/shop.html">Ver Más</a>
           </div>
         </div>
         <div class="glide__track" data-glide-el="track">
