--- a/products/hojas-de-mora.html
+++ b/products/hojas-de-mora.html
@@ -20,7 +20,7 @@
         rel="stylesheet">
     <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.2.1/css/all.css">
 
-    <title>Carqueja | Misiones Sabor</title>
+    <title>Hojas de Mora</title>
 </head>
 
 <body>
@@ -37,13 +37,11 @@
             </div>
             <div class="ms-product-dta">
                 <div class="ms-product-divcontent">
-                    <h1 class="ms-prd-h1">Carqueja</h1>
+                    <h1 class="ms-prd-h1">Hojas de Mora</h1>
                     <p class="ms-prd-price">$300 ARS</p>
-                    <h2 class="ms-prd-h2">Bacharis trimera</h2>
-                    <p class="ms-prd-p">Por su gusto amargo, la medicina
-                        popular la recomienda para combatir problemas digestivos
-                        y hepáticos. Es una planta ampliamente distribuida en América del Sur,
-                        donde es utilizada tradicionalmente como planta medicinal.
+                    <h2 class="ms-prd-h2">Morus Nigra</h2>
+                    <p class="ms-prd-p">En forma de té las hojas de la morera 
+                        tiene propiedades diuréticas y ayuda en los problemas de vejiga y estomacales.
                     </p>
                     <div>
                         <a class="collapsible">
@@ -57,10 +55,14 @@
                         </a>
                         <div class="ms-prd-drop-content">
                             <ul>
-                                <li>Anti-hepatotóxica.</li>
-                                <li>Es analgésica.</li>
+                                <li>Diurético.</li>
+                                <li>Es astringente.</li>
                                 <li>Anti-oxidante.</li>
                                 <li>Es anti-inflamatoria.</li>
+                                <li>Anti-séptica.</li>
+                                <li>Depurativa.</li>
+                                <li>Calmante.</li>
+                                <li>Laxante y tonificante.</li>   
                             </ul>
                         </div>
                     </div>
@@ -76,10 +78,16 @@
                         </a>
                         <div class="ms-prd-drop-content">
                             <ul>
-                                <li>Prevenir infecciones del sistema digestivo.</li>
-                                <li>Protejer el estómago y el hígado.</li>
-                                <li>Ayudar a bajar de peso.</li>
-                                <li>Auxiliar contra la diabetes tipo 1.</li>
+                                <li>Problemas de vejiga.</li>
+                                <li>Diabetes.</li>
+                                <li>Cálculos renales.</li>
+                                <li>Diarrea aguda.</li>
+                                <li>Menopausia.</li>
+                                <li>Síntomas premenstruales.</li>
+                                <li>Dolor de cabeza y dental.</li>
+                                <li>Problemas de colesterol y grasa intestinal.</li>
+                                <li>Problemas de hígado y vesícula biliar.</li>
+                                <li>Insomnio y nervios.</li>
                             </ul>
                         </div>
                     </div>
