--- a/products/isipo-mil-hombres.html
+++ b/products/isipo-mil-hombres.html
@@ -20,7 +20,7 @@
         rel="stylesheet">
     <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.2.1/css/all.css">
 
-    <title>Carqueja | Misiones Sabor</title>
+    <title>Isipo Mil Hombres | Misiones Sabor</title>
 </head>
 
 <body>
@@ -37,13 +37,11 @@
             </div>
             <div class="ms-product-dta">
                 <div class="ms-product-divcontent">
-                    <h1 class="ms-prd-h1">Carqueja</h1>
+                    <h1 class="ms-prd-h1">Isipó Mil Hombres</h1>
                     <p class="ms-prd-price">$300 ARS</p>
-                    <h2 class="ms-prd-h2">Bacharis trimera</h2>
-                    <p class="ms-prd-p">Por su gusto amargo, la medicina
-                        popular la recomienda para combatir problemas digestivos
-                        y hepáticos. Es una planta ampliamente distribuida en América del Sur,
-                        donde es utilizada tradicionalmente como planta medicinal.
+                    <h2 class="ms-prd-h2">Aristolochia triangularis</h2>
+                    <p class="ms-prd-p">Es una hierba que es muy buena para el tratamiento del reumatismo, 
+                        ya que con su uso desaparecen rápidamente los dolores musculares.
                     </p>
                     <div>
                         <a class="collapsible">
@@ -57,10 +55,12 @@
                         </a>
                         <div class="ms-prd-drop-content">
                             <ul>
-                                <li>Anti-hepatotóxica.</li>
-                                <li>Es analgésica.</li>
-                                <li>Anti-oxidante.</li>
-                                <li>Es anti-inflamatoria.</li>
+                                <li>Es anti-reumático.</li>
+                                <li>Es anti-séptico.</li>
+                                <li>Diurético.</li>
+                                <li>Depurativa.</li>
+                                <li>Protector hepático.</li>
+                                <li>Es un antídoto.</li>
                             </ul>
                         </div>
                     </div>
@@ -76,10 +76,14 @@
                         </a>
                         <div class="ms-prd-drop-content">
                             <ul>
-                                <li>Prevenir infecciones del sistema digestivo.</li>
-                                <li>Protejer el estómago y el hígado.</li>
-                                <li>Ayudar a bajar de peso.</li>
-                                <li>Auxiliar contra la diabetes tipo 1.</li>
+                                <li>Desinflamatorio y calmante para dolores de las articulaciones.</li>
+                                <li>Rigidez de los miembros del cuerpo.</li>
+                                <li>Precipita el ácido úrico.</li>
+                                <li>Problemas de ciática.</li>
+                                <li>Dolores lumbares.</li>
+                                <li>Artritis, gota y reuma.</li>
+                                <li>Enfermedades del riñón y la vesícula.</li>
+                                <li>Problemas cardíacos y de presión alta.</li>
                             </ul>
                         </div>
                     </div>
