--- a/products/lapacho-colorado.html
+++ b/products/lapacho-colorado.html
@@ -20,7 +20,7 @@
         rel="stylesheet">
     <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.2.1/css/all.css">
 
-    <title>Carqueja | Misiones Sabor</title>
+    <title>Lapacho Colorado | Misiones Sabor</title>
 </head>
 
 <body>
@@ -37,13 +37,10 @@
             </div>
             <div class="ms-product-dta">
                 <div class="ms-product-divcontent">
-                    <h1 class="ms-prd-h1">Carqueja</h1>
+                    <h1 class="ms-prd-h1">Lapacho Colorado</h1>
                     <p class="ms-prd-price">$300 ARS</p>
-                    <h2 class="ms-prd-h2">Bacharis trimera</h2>
-                    <p class="ms-prd-p">Por su gusto amargo, la medicina
-                        popular la recomienda para combatir problemas digestivos
-                        y hepáticos. Es una planta ampliamente distribuida en América del Sur,
-                        donde es utilizada tradicionalmente como planta medicinal.
+                    <h2 class="ms-prd-h2">Handroanthus Impetiginosus</h2>
+                    <p class="ms-prd-p">Es utilizado como tratamiento para el estómago, la piel y como anti-inflamatorio.
                     </p>
                     <div>
                         <a class="collapsible">
@@ -57,10 +54,14 @@
                         </a>
                         <div class="ms-prd-drop-content">
                             <ul>
-                                <li>Anti-hepatotóxica.</li>
-                                <li>Es analgésica.</li>
-                                <li>Anti-oxidante.</li>
-                                <li>Es anti-inflamatoria.</li>
+                                <li>Anti-bacterial.</li>
+                                <li>Anti-fúngico.</li>
+                                <li>Anti-inflamatorio.</li>
+                                <li>Es astringente.</li>
+                                <li>Anti-anémica.</li>
+                                <li>Hipotensora.</li>
+                                <li>Revitalizante.</li>
+                                <li>Hipoglucemiante.</li>
                             </ul>
                         </div>
                     </div>
@@ -76,10 +77,9 @@
                         </a>
                         <div class="ms-prd-drop-content">
                             <ul>
-                                <li>Prevenir infecciones del sistema digestivo.</li>
-                                <li>Protejer el estómago y el hígado.</li>
-                                <li>Ayudar a bajar de peso.</li>
-                                <li>Auxiliar contra la diabetes tipo 1.</li>
+                                <li>Eliminar bacterias del sistema digestivo.</li>
+                                <li>En uso externo tratar sarpullidos, heridas y úlceras.</li>
+                                <li>Contrarrestar inflamaciones artríticas.</li>
                             </ul>
                         </div>
                     </div>
