--- a/products/malva-blanca.html
+++ b/products/malva-blanca.html
@@ -20,7 +20,7 @@
         rel="stylesheet">
     <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.2.1/css/all.css">
 
-    <title>Carqueja | Misiones Sabor</title>
+    <title>Malva Blanca | Misiones Sabor</title>
 </head>
 
 <body>
@@ -37,13 +37,11 @@
             </div>
             <div class="ms-product-dta">
                 <div class="ms-product-divcontent">
-                    <h1 class="ms-prd-h1">Carqueja</h1>
+                    <h1 class="ms-prd-h1">Malva Blanca</h1>
                     <p class="ms-prd-price">$300 ARS</p>
-                    <h2 class="ms-prd-h2">Bacharis trimera</h2>
-                    <p class="ms-prd-p">Por su gusto amargo, la medicina
-                        popular la recomienda para combatir problemas digestivos
-                        y hepáticos. Es una planta ampliamente distribuida en América del Sur,
-                        donde es utilizada tradicionalmente como planta medicinal.
+                    <h2 class="ms-prd-h2">Malva sylvestris</h2>
+                    <p class="ms-prd-p">Es una deliciosa, refrescante y 
+                        emoliente flor, eficaz contra diversas enfermedades.
                     </p>
                     <div>
                         <a class="collapsible">
@@ -57,10 +55,10 @@
                         </a>
                         <div class="ms-prd-drop-content">
                             <ul>
-                                <li>Anti-hepatotóxica.</li>
-                                <li>Es analgésica.</li>
-                                <li>Anti-oxidante.</li>
-                                <li>Es anti-inflamatoria.</li>
+                                <li>Tiene mucha actividad antioxidante.</li>
+                                <li>Hepato-protectora.</li>
+                                <li>Anti-microbiana.</li>
+                                <li>Anti-nociceptiva.</li>
                             </ul>
                         </div>
                     </div>
@@ -76,10 +74,11 @@
                         </a>
                         <div class="ms-prd-drop-content">
                             <ul>
-                                <li>Prevenir infecciones del sistema digestivo.</li>
-                                <li>Protejer el estómago y el hígado.</li>
-                                <li>Ayudar a bajar de peso.</li>
-                                <li>Auxiliar contra la diabetes tipo 1.</li>
+                                <li>Calmar irritaciones de la piel y curar heridas.</li>
+                                <li>Aliviar la tos.</li>
+                                <li>Mejorar la sequedad bucal.</li>
+                                <li>Protejer de úlceras estomacales.</li>
+                                <li>Protejer la garganta del reflujo gástrico.</li>
                             </ul>
                         </div>
                     </div>
