--- a/products/marcela.html
+++ b/products/marcela.html
@@ -20,7 +20,7 @@
         rel="stylesheet">
     <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.2.1/css/all.css">
 
-    <title>Carqueja | Misiones Sabor</title>
+    <title>Marcela | Misiones Sabor</title>
 </head>
 
 <body>
@@ -37,13 +37,12 @@
             </div>
             <div class="ms-product-dta">
                 <div class="ms-product-divcontent">
-                    <h1 class="ms-prd-h1">Carqueja</h1>
+                    <h1 class="ms-prd-h1">Marcela</h1>
                     <p class="ms-prd-price">$300 ARS</p>
-                    <h2 class="ms-prd-h2">Bacharis trimera</h2>
-                    <p class="ms-prd-p">Por su gusto amargo, la medicina
-                        popular la recomienda para combatir problemas digestivos
-                        y hepáticos. Es una planta ampliamente distribuida en América del Sur,
-                        donde es utilizada tradicionalmente como planta medicinal.
+                    <h2 class="ms-prd-h2">Achyrocline saturejoides</h2>
+                    <p class="ms-prd-p">Usada para aliviar molestias digestivas como dolores de estómago, 
+                        en el hígado o el intestino.
+                        Al ser rica en quercetina sus bondades son muy beneficiosas.
                     </p>
                     <div>
                         <a class="collapsible">
@@ -57,8 +56,8 @@
                         </a>
                         <div class="ms-prd-drop-content">
                             <ul>
-                                <li>Anti-hepatotóxica.</li>
-                                <li>Es analgésica.</li>
+                                <li>Sedante.</li>
+                                <li>Rica en flavonoides.</li>
                                 <li>Anti-oxidante.</li>
                                 <li>Es anti-inflamatoria.</li>
                             </ul>
@@ -76,10 +75,9 @@
                         </a>
                         <div class="ms-prd-drop-content">
                             <ul>
-                                <li>Prevenir infecciones del sistema digestivo.</li>
-                                <li>Protejer el estómago y el hígado.</li>
-                                <li>Ayudar a bajar de peso.</li>
-                                <li>Auxiliar contra la diabetes tipo 1.</li>
+                                <li>Promover el buen sueño y descanso.</li>
+                                <li>Protejer el estómago, el hígado y intestinos.</li>
+                                <li>Es buena aliada anti-gripal.</li>
                             </ul>
                         </div>
                     </div>
