--- a/products/verbena.html
+++ b/products/verbena.html
@@ -20,7 +20,7 @@
         rel="stylesheet">
     <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.2.1/css/all.css">
 
-    <title>Carqueja | Misiones Sabor</title>
+    <title>Verbena | Misiones Sabor</title>
 </head>
 
 <body>
@@ -37,9 +37,9 @@
             </div>
             <div class="ms-product-dta">
                 <div class="ms-product-divcontent">
-                    <h1 class="ms-prd-h1">Carqueja</h1>
+                    <h1 class="ms-prd-h1">Verbena</h1>
                     <p class="ms-prd-price">$300 ARS</p>
-                    <h2 class="ms-prd-h2">Bacharis trimera</h2>
+                    <h2 class="ms-prd-h2">Verbena bonariensis</h2>
                     <p class="ms-prd-p">Por su gusto amargo, la medicina
                         popular la recomienda para combatir problemas digestivos
                         y hepáticos. Es una planta ampliamente distribuida en América del Sur,
@@ -57,9 +57,9 @@
                         </a>
                         <div class="ms-prd-drop-content">
                             <ul>
-                                <li>Anti-hepatotóxica.</li>
-                                <li>Es analgésica.</li>
-                                <li>Anti-oxidante.</li>
+                                <li>Es calmante y sedativa.</li>
+                                <li>Astringente.</li>
+                                <li>Digestiva y depurativa.</li>
                                 <li>Es anti-inflamatoria.</li>
                             </ul>
                         </div>
@@ -76,10 +76,8 @@
                         </a>
                         <div class="ms-prd-drop-content">
                             <ul>
-                                <li>Prevenir infecciones del sistema digestivo.</li>
-                                <li>Protejer el estómago y el hígado.</li>
-                                <li>Ayudar a bajar de peso.</li>
-                                <li>Auxiliar contra la diabetes tipo 1.</li>
+                                <li>Reducir la ansiedad.</li>
+                                <li>Promover el descanso y el sueño</li>
                             </ul>
                         </div>
                     </div>
