--- a/products/muerdago.html
+++ b/products/muerdago.html
@@ -20,7 +20,7 @@
         rel="stylesheet">
     <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.2.1/css/all.css">
 
-    <title>Carqueja | Misiones Sabor</title>
+    <title>Muerdago | Misiones Sabor</title>
 </head>
 
 <body>
@@ -37,13 +37,12 @@
             </div>
             <div class="ms-product-dta">
                 <div class="ms-product-divcontent">
-                    <h1 class="ms-prd-h1">Carqueja</h1>
+                    <h1 class="ms-prd-h1">Muérdago</h1>
                     <p class="ms-prd-price">$300 ARS</p>
-                    <h2 class="ms-prd-h2">Bacharis trimera</h2>
-                    <p class="ms-prd-p">Por su gusto amargo, la medicina
-                        popular la recomienda para combatir problemas digestivos
-                        y hepáticos. Es una planta ampliamente distribuida en América del Sur,
-                        donde es utilizada tradicionalmente como planta medicinal.
+                    <h2 class="ms-prd-h2">Viscum album</h2>
+                    <p class="ms-prd-p">Auxilia en la cura de afecciones uterinas, 
+                        leucorrea, hemorragias, diarreas y es muy bueno para la hipertensión, 
+                        estrés y ansiedad.
                     </p>
                     <div>
                         <a class="collapsible">
@@ -57,10 +56,12 @@
                         </a>
                         <div class="ms-prd-drop-content">
                             <ul>
-                                <li>Anti-hepatotóxica.</li>
-                                <li>Es analgésica.</li>
-                                <li>Anti-oxidante.</li>
+                                <li>Anti-hipertensivo.</li>
+                                <li>Sedante.</li>
+                                <li>Anti-tumoral.</li>
                                 <li>Es anti-inflamatoria.</li>
+                                <li>Es un protector inmunológico.</li>
+                                <li>Es diurético.</li>
                             </ul>
                         </div>
                     </div>
@@ -76,10 +77,14 @@
                         </a>
                         <div class="ms-prd-drop-content">
                             <ul>
-                                <li>Prevenir infecciones del sistema digestivo.</li>
-                                <li>Protejer el estómago y el hígado.</li>
-                                <li>Ayudar a bajar de peso.</li>
-                                <li>Auxiliar contra la diabetes tipo 1.</li>
+                                <li>Ayuda a eliminar la fatiga.</li>
+                                <li>Problemas de nervios.</li>
+                                <li>Insomnio, estrés y ansiedad.</li>
+                                <li>Resfriados y problemas respiratorios.</li>
+                                <li>La agitación y ataques de pánico</li>
+                                <li>Hipertensión.</li>
+                                <li>Artritis.</li>
+                                <li>Problemas cardiovasculares.</li>
                             </ul>
                         </div>
                     </div>
