--- a/products/stevia.html
+++ b/products/stevia.html
@@ -20,7 +20,7 @@
         rel="stylesheet">
     <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.2.1/css/all.css">
 
-    <title>Carqueja | Misiones Sabor</title>
+    <title>Stevia | Misiones Sabor</title>
 </head>
 
 <body>
@@ -31,19 +31,16 @@
         <div id="ms-product-tmp-div">
             <div class="ms-product-div-img">
                 <div class="ms-prd-img">
-                    <img src="https://cdn.shopify.com/s/files/1/0399/9704/6934/products/BrockleyBreakfast_Front_WR_720x.jpg?v=1637258271"
-                        alt="">
+                    <img src="https://cdn.shopify.com/s/files/1/0664/9744/6170/files/IMG_20221117_071108_585.jpg?v=1674855758" alt="">
                 </div>
             </div>
             <div class="ms-product-dta">
                 <div class="ms-product-divcontent">
-                    <h1 class="ms-prd-h1">Carqueja</h1>
+                    <h1 class="ms-prd-h1">Stevia</h1>
                     <p class="ms-prd-price">$300 ARS</p>
-                    <h2 class="ms-prd-h2">Bacharis trimera</h2>
-                    <p class="ms-prd-p">Por su gusto amargo, la medicina
-                        popular la recomienda para combatir problemas digestivos
-                        y hepáticos. Es una planta ampliamente distribuida en América del Sur,
-                        donde es utilizada tradicionalmente como planta medicinal.
+                    <h2 class="ms-prd-h2">Stevia rebaudiana</h2>
+                    <p class="ms-prd-p">Es un edulcorante natural, muy beneficiosa 
+                        para regular la azúcar en la sangre, es anti-oxidante y diurético.
                     </p>
                     <div>
                         <a class="collapsible">
@@ -57,10 +54,10 @@
                         </a>
                         <div class="ms-prd-drop-content">
                             <ul>
-                                <li>Anti-hepatotóxica.</li>
-                                <li>Es analgésica.</li>
-                                <li>Anti-oxidante.</li>
-                                <li>Es anti-inflamatoria.</li>
+                                <li>Edulcorante natural.</li>
+                                <li>No aporta calorías ni carbohidratos.</li>
+                                <li>Es anti-oxidante.</li>
+                                <li>Es diurético.</li>
                             </ul>
                         </div>
                     </div>
@@ -76,10 +73,12 @@
                         </a>
                         <div class="ms-prd-drop-content">
                             <ul>
-                                <li>Prevenir infecciones del sistema digestivo.</li>
-                                <li>Protejer el estómago y el hígado.</li>
-                                <li>Ayudar a bajar de peso.</li>
-                                <li>Auxiliar contra la diabetes tipo 1.</li>
+                                <li>Regular el azúcar en sangre.</li>
+                                <li>Problemas de presión arterial alta.</li>
+                                <li>Ayudar contra la diabetes.</li>
+                                <li>Eliminar la fatiga.</li>
+                                <li>Prevenir caries dentales</li>
+                                <li>Reducir el estrés cardiovascular y ataques cardíacos.</li>
                             </ul>
                         </div>
                     </div>
