MS Update (Shop & Product Pages)
Co-authored-by: Kevin Duncke <kevinduncke@gmail.com>
Co-authored-by: Roger Duncke <RogerDuncke@users.noreply.github.com>

--- a/products/flor-de-piedra.html
+++ b/products/flor-de-piedra.html
@@ -5,22 +5,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../ms.css">
     <link rel="stylesheet" href="../styles/bootstrap.min.css">
+    <link rel="stylesheet" href="../ms.css">
+
 
     <link rel="stylesheet" href="../styles/announcement-bar.css" type="text/css">
     <link rel="stylesheet" href="../styles/header.css" type="text/css">
     <link rel="stylesheet" href="../styles/footer.css" type="text/css">
-    <link rel="stylesheet" href="../styles/products.css">
+    <link rel="stylesheet" href="../styles/products.css" type="text/css">
+    <link rel="stylesheet" href="../styles/featured-products.css" type="text/css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
+
     <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.2.1/css/all.css">
 
-    <title>Lapacho Colorado | Misiones Sabor</title>
+    <title>Flor de Piedra | Misiones Sabor</title>
 </head>
 
 <body>
@@ -37,10 +40,11 @@
             </div>
             <div class="ms-product-dta">
                 <div class="ms-product-divcontent">
-                    <h1 class="ms-prd-h1">Lapacho Colorado</h1>
+                    <h1 class="ms-prd-h1">Flor de Piedra</h1>
                     <p class="ms-prd-price">$300 ARS</p>
-                    <h2 class="ms-prd-h2">Handroanthus Impetiginosus</h2>
-                    <p class="ms-prd-p">Es utilizado como tratamiento para el estómago, la piel y como anti-inflamatorio.
+                    <h2 class="ms-prd-h2">Lophophytum leandri eichler</h2>
+                    <p class="ms-prd-p">
+                        Ayuda especialmente a eliminar los cálculos renales y también tiene efectos positivos para el hígado y el riñon.
                     </p>
                     <div>
                         <a class="collapsible">
@@ -54,14 +58,10 @@
                         </a>
                         <div class="ms-prd-drop-content">
                             <ul>
-                                <li>Anti-bacterial.</li>
-                                <li>Anti-fúngico.</li>
-                                <li>Anti-inflamatorio.</li>
-                                <li>Es astringente.</li>
-                                <li>Anti-anémica.</li>
-                                <li>Hipotensora.</li>
-                                <li>Revitalizante.</li>
-                                <li>Hipoglucemiante.</li>
+                                <li>Diurético</li>
+                                <li>Hepático</li>
+                                <li>Colagogo</li>
+                                <li>Anti-inflamatorio</li>
                             </ul>
                         </div>
                     </div>
@@ -77,9 +77,8 @@
                         </a>
                         <div class="ms-prd-drop-content">
                             <ul>
-                                <li>Eliminar bacterias del sistema digestivo.</li>
-                                <li>En uso externo tratar sarpullidos, heridas y úlceras.</li>
-                                <li>Contrarrestar inflamaciones artríticas.</li>
+                                <li>Eliminar los cálculos renales</li>
+                                <li>Expulsión de la bilis retenida en la vesícula biliar</li>
                             </ul>
                         </div>
                     </div>
