--- a/products/marcela.html
+++ b/products/marcela.html
@@ -40,7 +40,7 @@
                     <h1 class="ms-prd-h1">Marcela</h1>
                     <p class="ms-prd-price">$300 ARS</p>
                     <h2 class="ms-prd-h2">Achyrocline saturejoides</h2>
-                    <p class="ms-prd-p">Usada para aliviar molestias digestivas como dolores de estómago, 
+                    <p class="ms-prd-p">Usada para aliviar molestias digestivas como dolores de estómago,
                         en el hígado o el intestino.
                         Al ser rica en quercetina sus bondades son muy beneficiosas.
                     </p>
@@ -103,6 +103,7 @@
 
     </footer>
     <script src="../scripts/collapsible.js"></script>
+    <script src="../scripts/bootstrap.min.js"></script>
 </body>
 
 </html>
