--- a/products/hojas-de-mora.html
+++ b/products/hojas-de-mora.html
@@ -113,6 +113,7 @@
 
     </footer>
     <script src="../scripts/collapsible.js"></script>
+    <script src="../scripts/bootstrap.min.js"></script>
 </body>
 
 </html>
