--- a/products/isipo-mil-hombres.html
+++ b/products/isipo-mil-hombres.html
@@ -109,6 +109,7 @@
 
     </footer>
     <script src="../scripts/collapsible.js"></script>
+    <script src="../scripts/bootstrap.min.js"></script>
 </body>
 
 </html>
