--- a/products/muerdago.html
+++ b/products/muerdago.html
@@ -110,6 +110,7 @@
 
     </footer>
     <script src="../scripts/collapsible.js"></script>
+    <script src="../scripts/bootstrap.min.js"></script>
 </body>
 
 </html>
