--- a/products/verbena.html
+++ b/products/verbena.html
@@ -103,6 +103,7 @@
 
     </footer>
     <script src="../scripts/collapsible.js"></script>
+    <script src="../scripts/bootstrap.min.js"></script>
 </body>
 
 </html>
