--- a/products/stevia.html
+++ b/products/stevia.html
@@ -31,7 +31,7 @@
         <div id="ms-product-tmp-div">
             <div class="ms-product-div-img">
                 <div class="ms-prd-img">
-                    <img src="https://cdn.shopify.com/s/files/1/0664/9744/6170/files/IMG_20221117_071108_585.jpg?v=1674855758" alt="">
+                    <img src="" alt="IMG1">
                 </div>
             </div>
             <div class="ms-product-dta">
