--- a/products/isipo-mil-hombres.html
+++ b/products/isipo-mil-hombres.html
@@ -31,8 +31,7 @@
         <div id="ms-product-tmp-div">
             <div class="ms-product-div-img">
                 <div class="ms-prd-img">
-                    <img src="https://cdn.shopify.com/s/files/1/0399/9704/6934/products/BrockleyBreakfast_Front_WR_720x.jpg?v=1637258271"
-                        alt="">
+                    <img src="" alt="IMG1">
                 </div>
             </div>
             <div class="ms-product-dta">
