fixed url img source in shop page

--- a/pages/shop.html
+++ b/pages/shop.html
@@ -33,9 +33,7 @@
                                     <div class="list-view-item__link">
                                         <div class="list-view-item__image-column">
                                             <div class="list-view-item__image-wrapper product-card__image-wrapper">
-                                                <img class="list-view-item__image"
-                                                    src="//cdn.shopify.com/s/files/1/0399/9704/6934/products/IronBuddha_Front_WR.jpg?v=1637255529"
-                                                    alt="Iron Buddha - Loose Leaf - Oolong Tea">
+                                                <img src="" alt="IMG1">
                                             </div>
                                         </div>
                                         <div class="product-card__content">
@@ -54,9 +52,7 @@
                                     <div class="list-view-item__link">
                                         <div class="list-view-item__image-column">
                                             <div class="list-view-item__image-wrapper product-card__image-wrapper">
-                                                <img class="list-view-item__image"
-                                                    src="//cdn.shopify.com/s/files/1/0399/9704/6934/products/IronBuddha_Front_WR.jpg?v=1637255529"
-                                                    alt="Iron Buddha - Loose Leaf - Oolong Tea">
+                                                <img src="" alt="IMG1">
                                             </div>
                                         </div>
                                         <div class="product-card__content">
@@ -75,9 +71,7 @@
                                     <div class="list-view-item__link">
                                         <div class="list-view-item__image-column">
                                             <div class="list-view-item__image-wrapper product-card__image-wrapper">
-                                                <img class="list-view-item__image"
-                                                    src="//cdn.shopify.com/s/files/1/0399/9704/6934/products/IronBuddha_Front_WR.jpg?v=1637255529"
-                                                    alt="Iron Buddha - Loose Leaf - Oolong Tea">
+                                                <img src="" alt="IMG1">
                                             </div>
                                         </div>
                                         <div class="product-card__content">
@@ -96,9 +90,7 @@
                                     <div class="list-view-item__link">
                                         <div class="list-view-item__image-column">
                                             <div class="list-view-item__image-wrapper product-card__image-wrapper">
-                                                <img class="list-view-item__image"
-                                                    src="//cdn.shopify.com/s/files/1/0399/9704/6934/products/IronBuddha_Front_WR.jpg?v=1637255529"
-                                                    alt="Iron Buddha - Loose Leaf - Oolong Tea">
+                                                <img src="" alt="IMG1">
                                             </div>
                                         </div>
                                         <div class="product-card__content">
@@ -117,9 +109,7 @@
                                     <div class="list-view-item__link">
                                         <div class="list-view-item__image-column">
                                             <div class="list-view-item__image-wrapper product-card__image-wrapper">
-                                                <img class="list-view-item__image"
-                                                    src="//cdn.shopify.com/s/files/1/0399/9704/6934/products/IronBuddha_Front_WR.jpg?v=1637255529"
-                                                    alt="Iron Buddha - Loose Leaf - Oolong Tea">
+                                                <img src="" alt="IMG1">
                                             </div>
                                         </div>
                                         <div class="product-card__content">
@@ -138,9 +128,7 @@
                                     <div class="list-view-item__link">
                                         <div class="list-view-item__image-column">
                                             <div class="list-view-item__image-wrapper product-card__image-wrapper">
-                                                <img class="list-view-item__image"
-                                                    src="//cdn.shopify.com/s/files/1/0399/9704/6934/products/IronBuddha_Front_WR.jpg?v=1637255529"
-                                                    alt="Iron Buddha - Loose Leaf - Oolong Tea">
+                                                <img src="" alt="IMG1">
                                             </div>
                                         </div>
                                         <div class="product-card__content">
@@ -159,9 +147,7 @@
                                     <div class="list-view-item__link">
                                         <div class="list-view-item__image-column">
                                             <div class="list-view-item__image-wrapper product-card__image-wrapper">
-                                                <img class="list-view-item__image"
-                                                    src="//cdn.shopify.com/s/files/1/0399/9704/6934/products/IronBuddha_Front_WR.jpg?v=1637255529"
-                                                    alt="Iron Buddha - Loose Leaf - Oolong Tea">
+                                                <img src="" alt="IMG1">
                                             </div>
                                         </div>
                                         <div class="product-card__content">
@@ -180,9 +166,7 @@
                                     <div class="list-view-item__link">
                                         <div class="list-view-item__image-column">
                                             <div class="list-view-item__image-wrapper product-card__image-wrapper">
-                                                <img class="list-view-item__image"
-                                                    src="//cdn.shopify.com/s/files/1/0399/9704/6934/products/IronBuddha_Front_WR.jpg?v=1637255529"
-                                                    alt="Iron Buddha - Loose Leaf - Oolong Tea">
+                                                <img src="" alt="IMG1">
                                             </div>
                                         </div>
                                         <div class="product-card__content">
@@ -201,9 +185,7 @@
                                     <div class="list-view-item__link">
                                         <div class="list-view-item__image-column">
                                             <div class="list-view-item__image-wrapper product-card__image-wrapper">
-                                                <img class="list-view-item__image"
-                                                    src="//cdn.shopify.com/s/files/1/0399/9704/6934/products/IronBuddha_Front_WR.jpg?v=1637255529"
-                                                    alt="Iron Buddha - Loose Leaf - Oolong Tea">
+                                                <img src="" alt="IMG1">
                                             </div>
                                         </div>
                                         <div class="product-card__content">
@@ -222,9 +204,7 @@
                                     <div class="list-view-item__link">
                                         <div class="list-view-item__image-column">
                                             <div class="list-view-item__image-wrapper product-card__image-wrapper">
-                                                <img class="list-view-item__image"
-                                                    src="//cdn.shopify.com/s/files/1/0399/9704/6934/products/IronBuddha_Front_WR.jpg?v=1637255529"
-                                                    alt="Iron Buddha - Loose Leaf - Oolong Tea">
+                                                <img src="" alt="IMG1">
                                             </div>
                                         </div>
                                         <div class="product-card__content">
