--- a/products/malva-blanca.html
+++ b/products/malva-blanca.html
@@ -81,7 +81,7 @@
                             </ul>
                         </div>
                     </div>
-                    <div>
+                    <!-- <div>
                         <a class="collapsible">
                             <div class="ms-prd-drop-div">
                                 <div class="ms-prd-divtitle">
@@ -94,7 +94,7 @@
                         <div class="ms-prd-drop-content">
                             <p>Hello World</p>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
