--- a/products/stevia.html
+++ b/products/stevia.html
@@ -82,7 +82,7 @@
                             </ul>
                         </div>
                     </div>
-                    <div>
+                    <!-- <div>
                         <a class="collapsible">
                             <div class="ms-prd-drop-div">
                                 <div class="ms-prd-divtitle">
@@ -95,7 +95,7 @@
                         <div class="ms-prd-drop-content">
                             <p>Hello World</p>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
