--- a/products/verbena.html
+++ b/products/verbena.html
@@ -80,7 +80,7 @@
                             </ul>
                         </div>
                     </div>
-                    <div>
+                    <!-- <div>
                         <a class="collapsible">
                             <div class="ms-prd-drop-div">
                                 <div class="ms-prd-divtitle">
@@ -93,7 +93,7 @@
                         <div class="ms-prd-drop-content">
                             <p>Hello World</p>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
