PS Update 3 (Added HTML Product Images)

--- a/products/carqueja.html
+++ b/products/carqueja.html
@@ -122,7 +122,7 @@
         <div id="ms-product-tmp-div">
             <div class="ms-product-div-img">
                 <div class="ms-prd-img">
-                    <img src="" alt="IMG1">
+                    <img src="https://misionessabor.com/images/products/Carqueja/Front/MS-IMG-CRQ-FT-2500px.jpg" alt="Carqueja">
                 </div>
             </div>
             <div class="ms-product-dta">
